# fire_satellite

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/core/: confidence.py  coordinator.py  ground_confidence.py  pipeline.py
app/data/: worldcover.py
app/services/: environmental.py  false_positive.py  landcover.py
app/utils/: geo.py  math.py  reason_generator.py
docker/: Dockerfile.runtime  start.sh
docs/: DEPLOYMENT.md  confidence_strategy.md
tests/: conftest.py  test_confidence.py  test_geo_utils.py  test_ground_confidence.py  test_reason_generator.py  test_schemas.py
